[tool.poetry]
name = "adventuregame-pythonedition"
version = "123adga1234"
description = ""
authors = ["Chidoziealways <uzowuluchidozie@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
pygame = "^2.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"